@@ -1,3 +1,6 @@
+Upcoming:
+- In worldstyles it is now possible to specify settings for city spheres. Including the possibility to predefine how the center of a sphere looks and possibly a part that is generated there
+
 1.18-5.3.12:
 - Fixed problem with floating grass
 - Fixed a bug where spawners were not actually being set in all cases
